fix: fix pixelperfect shift in page-app section

--- a/src/scss/index/page-app.scss
+++ b/src/scss/index/page-app.scss
@@ -3,24 +3,24 @@
 
 .page-app {
   padding-top: 100px;
-  margin-bottom: 100px;
+  padding-bottom: 100px;
 
   h2 {
+    margin-top: 0;
     margin-bottom: 48px;
   }
 
   .app {
-    @include mixins.flex(row-reverse, space-between);
+    @include mixins.flex(row-reverse, flex-end);
     flex-wrap: wrap;
 
-    &-img,
     &-description {
       width: 50%;
     }
 
     &-img {
       img {
-        margin: 0 auto;
+        margin-left: 144px;
       }
     }
 
